# railpulse_sql_analysis

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SQL&DB_theory.md  pyproject.toml  requirements-chat.txt  requirements-dashboard.txt  requirements.txt
dashboard/: README.md  app.py  sql_chat_page.py  text2sql_engine.py
data/db_parts/: README.md  SHA256SUMS  railpulse.db.sha256
docs/: RailPulse_Presentation.pptx  analysis_report.md  analysis_results.md  api_and_compliance.md  create_presentation.py  data_dictionary.md  data_quality.md  decisions.md  erd.md  glossary.md  railpulse.drawdb.json
output/: q1_annualised_departures_by_hour.csv  q1_naive_timetable_rows_by_hour.csv  q1_peak_by_daytype.csv  q1_peak_hour_headline.csv  q1_rank_divergence.csv  q2_brussels_central_platform_ranking.csv  q2_brussels_central_top3.csv  q2_hub_comparison.csv  q2_platform_hourly_congestion.csv  q2_platform_peak_pressure.csv  q2_unallocated_platform_calls.csv  q3_morning_departure_profile.csv  q3_morning_destinations_multilingual.csv  q3_morning_destinations_ranked.csv  q3_morning_vs_afternoon.csv  q3_top3_destinations.csv  q4_active_service_only.csv  q4_calendar_txt_is_empty.csv  q4_days_per_week_distribution.csv  q4_definition_sensitivity.csv  q4_frequency_by_trips.csv  q4_frequency_classification.csv  q4_trip_weighted.csv  q4_weekday_coverage.csv  q5_amenity_by_mode.csv  q5_amenity_by_route_category.csv  q5_network_amenity_coverage.csv  q5_route_amenity_ratios.csv  q5_station_accessibility_gap.csv  q5_worst_routes_all_sizes.csv  q5_worst_routes_by_passenger_exposure.csv  q6_active_service_alerts.csv  q6_delay_distribution.csv  q6_hub_composite_score.csv  q6_hub_hourly_shape.csv  q6_hub_punctuality.csv  q6_hub_structural_leaderboard.csv  q6_punctuality_all_stations.csv  q6_realtime_coverage.csv  q7_index_inventory.csv  (+8 more)
project-instructions/: README.md
project-instructions/01-sql-rail-db/: README.md
scripts/: db_parts.sh  poll_realtime.sh  setup_api_key.py
sql/: 01_staging.sql  02_schema.sql  03_transform.sql  04_indexes.sql  05_views.sql  06_realtime.sql  07_cleanup.sql
sql/analysis/: q1_peak_hour.sql  q2_platform_bottlenecks.sql  q3_morning_destinations.sql  q4_service_frequency.sql  q5_accessibility_audit.sql  q6_network_leaderboard.sql  q7_index_optimisation.sql
src/railpulse/: __init__.py  __main__.py  analyse.py  api_client.py  benchmark.py  build.py  cli.py  config.py  db.py  ingest_realtime.py  ingest_static.py  verify.py
tests/: conftest.py  test_api_client.py  test_sql_chat.py  test_sql_parsing.py  test_transform.py  test_views_and_analysis.py
